--- a/dsd/Web.config
+++ b/dsd/Web.config
@@ -17,9 +17,7 @@
   <!--<add name="DefaultConnection" connectionString="Data Source=.;Database=SureshT;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     
     <!--................Server...........-->
-   <add name="DefaultConnection"
-       connectionString="Data Source=workstation id=eMonitoringDB.mssql.somee.com;packet size=4096;user id=Priya92k_SQLLogin_1;pwd=ib3lbwu7nt;data source=eMonitoringDB.mssql.somee.com;persist security info=False;initial catalog=eMonitoringDB;"
-      providerName="System.Data.SqlClient" />
+   <add name="DefaultConnection" connectionString="Data Source=workstation id=eMonitoringDB.mssql.somee.com;packet size=4096;user id=Priya92k_SQLLogin_1;pwd=ib3lbwu7nt;data source=eMonitoringDB.mssql.somee.com;persist security info=False;initial catalog=eMonitoringDB;" providerName="System.Data.SqlClient" />
   
   </connectionStrings>
   <appSettings>
@@ -98,22 +96,18 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
 <system.net>
     <mailSettings>
       <smtp from="suresh.thakur92k@gmail.com">
-        <network host="smtp.gmail.com"
-                 port="587"
-                 userName="suresh.thakur92k@gmail.com"
-                 password="suresh92k"
-                 enableSsl="true" />
+        <network host="smtp.gmail.com" port="587" userName="suresh.thakur92k@gmail.com" password="suresh92k" enableSsl="true" />
         
       </smtp>
     </mailSettings>
   </system.net>
+<system.codedom>
+<compilers>
+<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+</compilers>
+</system.codedom>
 </configuration>
