--- a/dsd/Web.config
+++ b/dsd/Web.config
@@ -16,6 +16,8 @@
     <!--.............Local.................-->
   <!--<add name="DefaultConnection" connectionString="Data Source=.;Database=SureshT;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     
+     <!--<add name="DefaultConnection" connectionString="Data Source=.;Database=SureshT;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    
     <!--................Server...........-->
    <add name="DefaultConnection" connectionString="Data Source=workstation id=eMonitoringDB.mssql.somee.com;packet size=4096;user id=Priya92k_SQLLogin_1;pwd=ib3lbwu7nt;data source=eMonitoringDB.mssql.somee.com;persist security info=False;initial catalog=eMonitoringDB;" providerName="System.Data.SqlClient" />
   
