--- a/dsd/dsd.csproj
+++ b/dsd/dsd.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\aaa.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Class1.cs" />
     <Compile Include="Models\District.cs" />
     <Compile Include="Models\DM_DashboardModel.cs" />
     <Compile Include="Models\EmployeeDetails.cs" />
@@ -206,6 +207,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MailModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ModalTaskStatus.cs" />
     <Compile Include="Models\ProjectModels.cs" />
     <Compile Include="Models\SubDivision.cs" />
     <Compile Include="Models\TaskModels.cs" />
@@ -287,6 +289,8 @@
     <Content Include="Views\SendMailer\Index.cshtml" />
     <Content Include="Views\Task\fileDownload.cshtml" />
     <Content Include="Views\UserDashBoard\UserDashBoardIndex.cshtml" />
+    <Content Include="Views\UserDashBoard\UserDashBoardIndex1.cshtml" />
+    <Content Include="Views\UserDashBoard\UserIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
